--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,10 @@
-deploy.ant.properties.file=/home/mangekyou/.netbeans/8.0/config/GlassFishEE6/Properties/gfv3-1451035387.properties
+deploy.ant.properties.file=/home/mangekyou/.netbeans/7.4/config/GlassFishEE6/Properties/gfv3-1768195143.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/opt/glassfish/glassfish/domains/domain1
 j2ee.server.home=/opt/glassfish/glassfish
-j2ee.server.instance=[/opt/glassfish/glassfish:/opt/glassfish/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.instance=[/opt/glassfish/glassfish:/opt/glassfish/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/opt/glassfish
-user.properties.file=/home/mangekyou/.netbeans/8.0/build.properties
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=/home/mangekyou/.netbeans/7.4/build.properties
