--- a/Inventario_IIB/nbproject/private/private.properties
+++ b/Inventario_IIB/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/clau/.netbeans/7.4/config/GlassFishEE6/Properties/gfv3-1394882950.properties
+deploy.ant.properties.file=/home/beth/.netbeans/7.4/config/GlassFishEE6/Properties/gfv3-522484165.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/clau/.netbeans/7.4/config/GF_4.0_29/domain1
+j2ee.server.domain=/home/beth/.netbeans/7.4/config/GF_4.0_35/domain1
 j2ee.server.home=/usr/local/glassfish-4.0/glassfish
 j2ee.server.instance=[/usr/local/glassfish-4.0/glassfish:/usr/local/glassfish-4.0/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/usr/local/glassfish-4.0
-user.properties.file=/home/clau/.netbeans/7.4/build.properties
+user.properties.file=/home/beth/.netbeans/7.4/build.properties
